login plus vs on mobile fix

--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,8 @@ body {
 }
 
 .App {
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  height: 100vh; height: 100dvh; overflow: hidden;
   display: flex;
 }
 
